--- a/configs/loki-config.yml
+++ b/configs/loki-config.yml
@@ -54,6 +54,7 @@ limits_config:
   reject_old_samples_max_age: 168h
   max_cache_freshness_per_query: 10m
   split_queries_by_interval: 15m
+  allow_delete: true
 
 chunk_store_config:
   max_look_back_period: 0s
