--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,11 +16,11 @@ services:
     image: grafana/promtail:latest
     container_name: promtail
     volumes:
-      - ./configs/promtail-config.yml:/etc/promtail/config.yml
+      # - ./configs/promtail-config.yml:/etc/promtail/config.yml
       - /var/log:/var/log:ro
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
-    command: -config.file=/etc/promtail/config.yml
+    # command: -config.file=/etc/promtail/config.yml
     networks:
       - grafana-stack
     restart: unless-stopped
