--- a/portainer-stack.yml
+++ b/portainer-stack.yml
@@ -1,123 +1,168 @@
 # Portainer Stack Configuration
 # คัดลอกเนื้อหานี้ไปใส่ใน Portainer Web Editor
+# Updated to match docker-compose.yml with environment variables and all services
 
 version: '3.8'
 
 services:
   # Loki - Log Aggregation System
   loki:
-    image: grafana/loki:2.9.0
-    container_name: grafana-stack_loki
+    image: grafana/loki:latest
+    container_name: loki
     ports:
-      - "3998:3100"
+      - "${LOKI_PORT}:3100"
     volumes:
-      - loki-config:/etc/loki/
       - loki-data:/loki
-    command: -config.file=/etc/loki/local-config.yaml
+      - ${LOKI_DATA_PATH}:/loki
     networks:
-      - grafana-stack
+      - ${NETWORK_NAME}
     restart: unless-stopped
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-    configs:
-      - source: loki-config
-        target: /etc/loki/local-config.yaml
 
-  # Promtail - Log Collector
+  # Promtail - Log Collector (Minimal)
   promtail:
-    image: grafana/promtail:2.9.0
-    container_name: grafana-stack_promtail
+    image: grafana/promtail:latest
+    container_name: promtail
     volumes:
-      - promtail-config:/etc/promtail/
       - /var/log:/var/log:ro
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
-    command: -config.file=/etc/promtail/config.yml
     networks:
-      - grafana-stack
+      - ${NETWORK_NAME}
     restart: unless-stopped
     depends_on:
       - loki
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-    configs:
-      - source: promtail-config
-        target: /etc/promtail/config.yml
+      - sentry
 
   # Grafana - Visualization & Dashboard
   grafana:
-    image: grafana/grafana:10.2.0
-    container_name: grafana-stack_grafana
+    image: grafana/grafana:latest
+    container_name: grafana
     ports:
-      - "3999:3000"
+      - "${GRAFANA_PORT}:3000"
     volumes:
       - grafana-data:/var/lib/grafana
-      - grafana-datasources:/etc/grafana/provisioning/datasources/
-      - grafana-dashboards:/etc/grafana/provisioning/dashboards/
-      - dashboard-files:/etc/grafana/dashboards
+      - ${GRAFANA_DATA_PATH}:/var/lib/grafana
     environment:
-      - GF_SECURITY_ADMIN_USER=admin
-      - GF_SECURITY_ADMIN_PASSWORD=admin123
+      - GF_SECURITY_ADMIN_USER=${GRAFANA_ADMIN_USER}
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD}
       - GF_USERS_ALLOW_SIGN_UP=false
-      - GF_LOG_LEVEL=info
-      - GF_INSTALL_PLUGINS=grafana-clock-panel,grafana-simple-json-datasource
     networks:
-      - grafana-stack
+      - ${NETWORK_NAME}
     restart: unless-stopped
     depends_on:
       - loki
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-    configs:
-      - source: grafana-datasources
-        target: /etc/grafana/provisioning/datasources/datasources.yml
-      - source: grafana-dashboards
-        target: /etc/grafana/provisioning/dashboards/dashboards.yml
-      - source: logs-dashboard
-        target: /etc/grafana/dashboards/logs-dashboard.json
 
-# Configurations (สำหรับ Portainer)
-# หมายเหตุ: ใน Portainer ต้องสร้าง Configs เหล่านี้แยกก่อน
-configs:
-  loki-config:
-    external: true
-  promtail-config:
-    external: true
-  grafana-datasources:
-    external: true
-  grafana-dashboards:
-    external: true
-  logs-dashboard:
-    external: true
+  # ---------- Sentry Dependencies ----------
+  postgres:
+    image: postgres:14
+    container_name: sentry_postgres
+    restart: always
+    environment:
+      POSTGRES_USER: sentry
+      POSTGRES_PASSWORD: sentry
+      POSTGRES_DB: sentry
+    volumes:
+      - sentry_postgres:/var/lib/postgresql/data
+    networks:
+      - ${NETWORK_NAME}
 
-# Networks
+  redis:
+    image: redis:7
+    container_name: sentry_redis
+    restart: always
+    volumes:
+      - sentry_redis:/data
+    networks:
+      - ${NETWORK_NAME}
+
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.6.0
+    container_name: sentry_zookeeper
+    restart: always
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+    networks:
+      - ${NETWORK_NAME}
+
+  kafka:
+    image: confluentinc/cp-kafka:7.6.0
+    container_name: sentry_kafka
+    restart: always
+    depends_on:
+      - zookeeper
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    networks:
+      - ${NETWORK_NAME}
+
+  # ---------- Sentry Core ----------
+  sentry:
+    image: getsentry/sentry:latest
+    container_name: sentry_web
+    restart: always
+    depends_on:
+      - postgres
+      - redis
+      - kafka
+    environment:
+      SENTRY_SECRET_KEY: "${SENTRY_SECRET_KEY}"
+      SENTRY_POSTGRES_HOST: postgres
+      SENTRY_DB_USER: sentry
+      SENTRY_DB_PASSWORD: sentry
+      SENTRY_DB_NAME: sentry
+      SENTRY_REDIS_HOST: redis
+      SENTRY_KAFKA_HOSTS: kafka:9092
+    ports:
+      - "${SENTRY_PORT}:9000"
+    networks:
+      - ${NETWORK_NAME}
+
+  worker:
+    image: getsentry/sentry:latest
+    container_name: sentry_worker
+    restart: always
+    depends_on:
+      - sentry
+    command: run worker
+    environment:
+      SENTRY_SECRET_KEY: "${SENTRY_SECRET_KEY}"
+      SENTRY_POSTGRES_HOST: postgres
+      SENTRY_DB_USER: sentry
+      SENTRY_DB_PASSWORD: sentry
+      SENTRY_DB_NAME: sentry
+      SENTRY_REDIS_HOST: redis
+      SENTRY_KAFKA_HOSTS: kafka:9092
+    networks:
+      - ${NETWORK_NAME}
+
+  cron:
+    image: getsentry/sentry:latest
+    container_name: sentry_cron
+    restart: always
+    depends_on:
+      - sentry
+    command: run cron
+    environment:
+      SENTRY_SECRET_KEY: "${SENTRY_SECRET_KEY}"
+      SENTRY_POSTGRES_HOST: postgres
+      SENTRY_DB_USER: sentry
+      SENTRY_DB_PASSWORD: sentry
+      SENTRY_DB_NAME: sentry
+      SENTRY_REDIS_HOST: redis
+      SENTRY_KAFKA_HOSTS: kafka:9092
+    networks:
+      - ${NETWORK_NAME}
+
+# ---------- Networks & Volumes ----------
 networks:
-  grafana-stack:
+  ${NETWORK_NAME}:
     driver: bridge
-    name: grafana-stack
 
-# Volumes
 volumes:
   loki-data:
-    driver: local
   grafana-data:
-    driver: local
-  loki-config:
-    driver: local
-  promtail-config:
-    driver: local
-  grafana-datasources:
-    driver: local
-  grafana-dashboards:
-    driver: local
-  dashboard-files:
-    driver: local
+  sentry_postgres:
+  sentry_redis:
