Update .gitignore to exclude the data directory and modify grafana.db binary file for improved repository management.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Data directories - exclude persistent data from version control
-data/
+data
 
 # Environment files - keep template but exclude actual config
 .env
