Update .gitignore to exclude all files in the data directory and add grafana.db to improve repository management and prevent version control of persistent data.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Data directories - exclude persistent data from version control
 data
+data/*
+grafa.db
 
 # Environment files - keep template but exclude actual config
 .env
