--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ services:
 
   # ---------- Sentry Dependencies ----------
   postgres:
-    image: postgres:latest
+    image: postgres:14
     container_name: sentry_postgres
     restart: always
     environment:
@@ -61,7 +61,7 @@ services:
       - default
 
   redis:
-    image: redis:latest
+    image: redis:7
     container_name: sentry_redis
     restart: always
     volumes:
@@ -70,7 +70,7 @@ services:
       - default
 
   zookeeper:
-    image: confluentinc/cp-zookeeper:latest
+    image: confluentinc/cp-zookeeper:7.6.0
     container_name: sentry_zookeeper
     restart: always
     environment:
@@ -79,7 +79,7 @@ services:
       - default
 
   kafka:
-    image: confluentinc/cp-kafka:latest
+    image: confluentinc/cp-kafka:7.6.0
     container_name: sentry_kafka
     restart: always
     depends_on:
