Update docker-compose.yml to use 'sentry:latest' image for both sentry and cron services, ensuring consistency in image usage. Enhance settings.local.json to allow additional Bash commands for improved functionality.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,7 +71,7 @@ services:
 
   # ---------- Sentry Core ----------
   sentry:
-    image: getsentry/sentry:latest
+    image: sentry:latest
     container_name: sentry_web
     restart: unless-stopped
     depends_on:
@@ -93,7 +93,7 @@ services:
       - default
 
   cron:
-    image: getsentry/sentry:latest
+    image: sentry:latest
     container_name: sentry_cron
     restart: unless-stopped
     depends_on:
